--- a/src/App.css
+++ b/src/App.css
@@ -8,30 +8,41 @@ body {
 }
 
 .container {
-    padding: 1rem;
+    padding: 1rem 5rem;
 }
 
 .container>div {
     margin: 1rem 0;
 }
 
-.title {
-    color: rgb(0, 219, 219);
+.title h1 {
+    color: #00dbdb;
 }
 
 .list {
     border-radius: 0.25rem;
-}
-
-.item {
-    cursor: pointer;
-    border-bottom: #ccc 1px solid;
-    color: rgb(0, 219, 219);
-    display: flex;
     background-color: #fff;
 }
 
-.item.completed {
+.item {
+    display: flex;
+    align-items: center;
+}
+
+.item>* {
+    font-size: 1.2rem;
+    margin: 0 1rem;
+}
+
+.item svg {
+    cursor: pointer;
+}
+
+.item-date {
+    font-size: 0.75rem;
+}
+
+.completed {
     color: #f00;
 }
 
@@ -39,47 +50,11 @@ body {
     text-decoration: line-through;
 }
 
-.item:first-child {
-    border-top-left-radius: 0.25rem;
-    border-top-right-radius: 0.25rem;
+.delete {
+    font-size: 1.5rem;
 }
 
-.item:last-child {
-    border: 0;
-    border-bottom-left-radius: 0.25rem;
-    border-bottom-right-radius: 0.25rem;
-}
-
-.item>div {
-    padding: 1rem;
-}
-
-.item-title {
-    width: 100%;
-}
-
-.item-del {
-    color: #ccc;
-}
-
-.input {
+.form {
     display: flex;
     justify-content: center;
-}
-
-.input>* {
-    display: block;
-}
-
-.input input, .input button {
-    border: 0;
-    outline: 0;
-    border-radius: 0.25rem;
-    height: 2rem;
-    padding-left: 1rem;
-}
-
-.input button {
-    cursor: pointer;
-    padding: 0 1rem;
 }
